Iniciado artigo sobre sistemas embarcados

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
         <aside id="sidebar">
 
           {% if site.github.is_project_page %}
-            <p class="repo-owner"><a href="{{ site.github.repository_url }}">Kernel notes</a> is maintained by <a href="{{ site.github.owner_url }}">Gustavo Bittencourt</a>.</p>
+	  <p class="repo-owner" style="text-align:right;">End.: Rua Venâncio Veloso 144, sala 204<br>Email: contato@gbittencourt.net<br>Tel.: (21) 98283-6692</p>
           {% endif %}
         </aside>
       </div>
