--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,20 +8,6 @@ html {
 	overflow-y: scroll; 
 }
 
-/* Put sidebar below */
-aside#sidebar {
-	min-height: 0;
-	padding: 20px 0;
-	margin-top: 20px;
-	background-image: none;
-	border-top: solid 1px #ddd;
-}
-
-#main-content, aside#sidebar {
-	float: none;
-	width: 100%;
-}
-
 /* Ajust code colors */
 .highlight {
 	background-color: #333333;
@@ -36,14 +22,15 @@ pre code {
 	color: #cccccc;
 }
 
-/* Ajust headers*/
+/* Header*/
 header {
-	padding-top: 15px;
+	padding-top: 0px;
 	padding-bottom: 0;
 	border: 0;	
 }
 
 header h1 {
+	padding-top: 15px;
 	width: 100%;
 	font-size: 48px;
 }
@@ -58,6 +45,15 @@ header .inner {
 	margin-left: 10px;
 }
 
+#content-wrapper {
+    padding-top: 0;
+}
+
+#main-content {
+    padding-top: 5px;
+}
+
+/* Main content*/
 #main-content h2 {
 	border-bottom: 1px solid #a2a9b1;	
 }
@@ -66,6 +62,20 @@ header .inner {
 	content: ""; 
 	padding-right: inherit;
 	margin-left: inherit;
+}
+
+/* Put sidebar below */
+aside#sidebar {
+	min-height: 0;
+	padding: 5px;
+	margin-top: 20px;
+	background-image: none;
+	border-top: solid 1px #a2a9b1;
+}
+
+#main-content, aside#sidebar {
+	float: none;
+	width: 100%;
 }
 
 /* Alert box */
@@ -105,4 +115,29 @@ header .inner {
 .menu li a.active {
     color: darkgrey;
     background-color: white;
+}
+
+.lang-menu {
+	list-style-type: none;
+    margin: 0;
+	padding: 0;
+    overflow: hidden;
+	background-color: transparent;
+	font-weight: bold;
+}
+
+.lang-menu li {
+	float: right;
+	padding: 0px 3px 0px 3px;
+	font-weight: bold;
+	background-color: white;
+}
+
+	
+.lang-menu li a {
+	font-weight: normal;	
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    color: dimgray;
 }
