--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="inner">
-        <a href="/{{page.lang}}/"> 
+        <a href="/{{page.lang}}/main/"> 
           <h1>{{ site.title }}</h1>
         </a>
       </div>
