--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -86,6 +86,18 @@ aside#sidebar {
 	margin-bottom: 15px;
 }
 
+form * {
+	width: 100%;
+	padding: 3px;
+	margin: 3px;
+	border: 1px solid dimgrey;
+}
+
+form button {
+	width: auto;
+}
+
+
 /* Menu */
 .menu {
 	list-style-type: none;
