--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -154,3 +154,17 @@ form button {
     text-decoration: none;
     color: dimgray;
 }
+
+/* Images */
+
+img {
+	border: solid 1px dimgray;
+	margin: 10px 0 10px 10px;
+	float: right;
+	max-width: 100%;
+	
+}
+
+h2 {
+	overflow: hidden;
+}
